text wrapping fix?

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body{
     font: 15px/1 Arial, Helvetica, sans-serif;
     padding:0;
     margin:0;
+    flex-wrap: wrap;
     background-color: #FFFFFF;
 
 }
